[project]
name = "credential-proxy"
version = "0.1.0"
description = "Matrix 审批 + TPM 解封 + KeePassXC 后端的凭据代理服务"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "matrix-nio>=0.7",
    "pykeepass>=4.0",
    "brotli",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
