[project]
name = "credential-proxy"
version = "0.1.5"
description = "Matrix 审批 + TPM 解封 + KeePassXC 后端的凭据代理服务"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Keivry"},
]
dependencies = [
    "aiohttp>=3.9",
    "matrix-nio>=0.7",
    "pykeepass>=4.0",
    "brotli>=1.0",
]

[project.urls]
Repository = "https://github.com/Keivry/credential-proxy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["proxy.py"]
