[project]
name = "credential-proxy"
version = "0.4.0"
description = "Matrix 审批 + TPM 解封 + KeePassXC 后端的凭据代理服务"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Keivry"},
]
dependencies = [
    "aiohttp>=3.9",
    "matrix-nio>=0.7",
    "pykeepass>=4.0",
    "brotli>=1.0",
]

[project.urls]
Repository = "https://github.com/Keivry/credential-proxy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["proxy.py"]

[tool.ruff.lint]
ignore = [
    # 中文注释中的全角字符（：（）等）是正确的中文标点，不是混淆
    "RUF001", "RUF002", "RUF003",
    # docstring 格式（中文项目不适用英文标点规则）
    "D400", "D415",
    # 函数复杂度（历史遗留）
    "C901", "PLR0915",
    # 缺少返回类型注解（历史遗留，不阻塞运行）
    "ANN202", "ANN201", "ANN001", "ANN002",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D", "ANN", "S"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
